# testris

./: .gitignore  INSTALL  Makefile  Makefile.in  README  configure  configure.ac
src/: Makefile.am  Makefile.in  main.c  testris.c  testris.h  testrisio.c  testrisio.h  testrisutils.c  testrisutils.h
